--- a/display-flex/index.html
+++ b/display-flex/index.html
@@ -3,29 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>vendedor de carros</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
+        <div class="logo">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGwWYXILaZdPpC0h3BCchZb2L0lxxHCXuf-Q&s" style="width: 80x80;" alt="Logo da Instituição">
+        </div>
         <h1> ferro-velho do gibi</h1>
         <div class="header-menu">
             <select>
-                <option>Catálogo</option>
+                <option value="" disabled selected>Catálogo</option>
                 <option>Carros usados</option>
                 <option>Carro quebrados</option>
                 <option>Promoções</option>
             </select>
 
             <select>
-                <option>Marcas</option>
+                <option value="" disabled selected>Marcas</option>
                 <option>Ford</option>
                 <option>Chevrolet</option>
                 <option>Honda</option>
             </select>
 
             <select>
-                <option>Contatos</option>
+                <option value="" disabled selected>Contatos</option>       
                 <option>Fale conosco</option>
                 <option>Localização</option>
             </select>
@@ -56,7 +60,7 @@
         <div class="catalong-card">
         <img src="https://s2-autoesporte.glbimg.com/Oniqgg1X2RWRDOXa6_6knCnu2F8=/0x0:1460x975/924x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_cf9d035bf26b4646b105bd958f32089d/internal_photos/bs/2023/t/z/xZjSBwRfa8uAXLGy3QEw/carro-abandonado-em-baixo-de-arvore-na-rua-ford-escort.jpg" alt="carro 3">
         <h3>carro 3</h3>
-        <p>descrição do carro: excelente pra remendo!</p>
+        <p>descrição do carro: perfeito pra sua sogra!</p>
         <button>saiba mais</button>
     </div>
 </div>
@@ -65,36 +69,38 @@
     <div class="catalong-card">
     <img src="https://cdn.motor1.com/images/mgl/3W10GA/s3/ford-ranch-wagon-1957.jpg" alt="carro 4">
     <h3>carro 4</h3>
-    <p>descrição do carro: excelente pra remendo!</p>
+    <p>descrição do carro: legal pra dar rolê!</p>
     <button>saiba mais</button>
  </div>
 </div>
 
 </div>
 <div class="catalong-card">
-<img src="https://img.freepik.com/fotos-premium/carro-velho_69709-93.jpg" alt="carro 5">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS76LstOi5wNg19xMmCZQBs2eGKadc3dIbm1A&s" alt="carro 5">
 <h3>carro 5</h3>
-<p>descrição do carro: excelente pra remendo!</p>
+<p>descrição do carro: o carro perfeito,só que sem motor!</p>
 <button>saiba mais</button>
 </div>
 </div>
 
 </section>
 
-<section class="contact-form">
-    <h2>entre em contato</h2>
+<section class="form-container"> <!--nova seção com class form-cont-->
+    <div class="contact-form">  <!--alterar section por div-->
+    <h2>Entre em contato</h2>
     <form action="#">
-        <label for="name">nome: </label>
+        <label for="name"> <i class="fas fa-user"></i> nome: </label>
         <input type="text" id="name" placeholder="digite um nome válido">
 
-        <label for="email">email: </label>
+        <label for="email"><i class="fas fa-envelope"></i>  email: </label>
         <input type="email" id="email" placeholder="digite um e-mail válido">
 
-        <label for="email">nome: </label>
+        <label for="message"><i class="fas fa-message"></i>  messagem: </label>
         <textarea id="message" rows="5" placeholder="como podemos te ajudar?"></textarea>
 
         <button type="submit">enviar</button>
     </form>
+</div>
 </section>
     <footer>
         <ul>
